update cards page home

--- a/ControleContatos/ControleContatos/appsettings.json
+++ b/ControleContatos/ControleContatos/appsettings.json
@@ -7,7 +7,7 @@
   },
 
   "ConnectionStrings": {
-    "Database": "Server=Seu Database;Database=DB_Contatos;Integrated Security=SSPI;TrustServerCertificate=True"
+    "Database": "Server=DESKTOP-K5K662S\\SQLEXPRESS;Database=DB_Contatos;Integrated Security=SSPI;TrustServerCertificate=True"
   },
 
   "SMTP": {
